--- a/_config.yml
+++ b/_config.yml
@@ -15,9 +15,9 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
 
 # 博主
 author: true
-name: 'Today and So on'
+name: 'By Seo Young'
 NickName: 'IraJane'
-webtitle: 'Today and So on'
+webtitle: 'Dear Me'
 bio: 'Becoming what I want'
 about: true
 aboutyou: '#Study, #Happiness'
