--- a/_config.yml
+++ b/_config.yml
@@ -70,8 +70,8 @@ client_id: ''  # 注册 OAuth Application 后获得的 client_id
 client_secret: ''  # 注册 OAuth Application 后获得的 client_secret
 
 # Share : weibo, qq, wechat, tencent, douban, qzone, linkedin, diandian, facebook, twitter, google
-social-share: true
-social-share-items: ['facebook', 'github', 'google']
+social-share: false
+social-share-items: ['facebook', 'google']
 
 # 百度统计 在baidu-url里填写自己相关的url代码
 baidu: false
