--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,7 @@ nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
   Home: '/index.html'
   Study: '/study.html' # 공부 메모
   Journal: '/timeline.html' #독서, 일기, 취미 등등
+  Memo: '/memo.html' #독서, 일기, 취미 등등
   
 
 # 博主
