--- a/_config.yml
+++ b/_config.yml
@@ -24,17 +24,15 @@ webtitle: 'Dear Me'
 bio: 'Becoming what I want'
 about: true
 aboutyou: '#Study, #Happiness'
-portraits: '/assets/profile.jpeg' # your portraits image file path
+portraits: '/assets/flower.jpeg' # your portraits image file path
 
 # SNS
 SNS: true
 SNS-icon: #['Facebook', 'github', 'Twitter', 'instagram']
-  mail: ''
-  github: 'gg'
+  mail: 'ukelly822@gmail.com'
+  github: 'https://github.com/IraJane'
   instagram: 'ii'
-  Twitter: ''
-  Facebook: ''
-  Google: ''
+
 
 
 # 分页
