--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ url: 'https://IraJane.github.io' # your host
 nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
   Home: '/index.html'
   Study: '/study.html' # 공부 메모
-  Journal: '/timeline.html' #독서, 일기, 취미 등등
-  Memo: '/memo.html' #독서, 일기, 취미 등등
+  Timeline: '/timeline.html' #독서, 일기, 취미 등등
+  Jpurnal: '/memo.html' #독서, 일기, 취미 등등
   Self: '/about.html'
 
   
