--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,11 @@ description: 'Becoming what I want'
 keywords: '#Study, #Happiness'
 url: 'https://IraJane.github.io' # your host
 
-# nav 中文字符空格：&emsp;
-nav: # 最佳体验 六个标签 且最好每个标签不超过4中文字
+
+nav: 
   Home: '/index.html'
-  Study: '/study.html' # 공부 메모
-  Timeline: '/timeline.html' #독서, 일기, 취미 등등
-  Jpurnal: '/memo.html' #독서, 일기, 취미 등등
+  Journal: '/study.html' # 공부 메모 테그로 구분하기
+  Timeline: '/timeline.html' 
   Self: '/about.html'
 
   
